--- a/helm/charts/auth-service/templates/pvc-redis.yaml
+++ b/helm/charts/auth-service/templates/pvc-redis.yaml
@@ -6,9 +6,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}-redis-pvc
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    {{ include "authservice.labels" . }}
 spec:
   accessModes:
     - ReadWriteOnce
