--- a/helm/charts/auth-service/templates/secret.yaml
+++ b/helm/charts/auth-service/templates/secret.yaml
@@ -4,9 +4,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}-secret
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    {{ include "authservice.labels" . }}
   annotations:
     helm.sh/hook: pre-install
 data:
