--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -5,9 +5,7 @@ metadata:
   name: '{{ .Release.Name }}-bbk-oathkeeper-rules'
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    {{ include "bitbroker.labels" . }}
 data:
   "access-rules.json": |
     [{
