--- a/helm/charts/rate-service/templates/service.yaml
+++ b/helm/charts/rate-service/templates/service.yaml
@@ -4,10 +4,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}
   namespace: '{{ .Release.Namespace }}'
   labels:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/name: {{ .Release.Name }}-{{ .Chart.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    {{ include "rateservice.labels" . }}
 spec:
   ports:
   - name: http
