--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -24,6 +24,7 @@ global:
   ## Admin settings
   ##
   admin:
+    name: "Admin"
     email: "noreply@bit-broker.io"
     jti: "8facd32b-41b0-44e8-a97a-e8b5dc610d46"
 
