--- a/helm/charts/portal/templates/configmap.yaml
+++ b/helm/charts/portal/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{ $gatewayProtocol :=  (empty .Values.global.gateway.tlsSecret) | ternary "http" "https" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -13,4 +14,4 @@ data:
   MAIL_USER_PWD: "{{ .Values.mail.password | default .Values.global.portal.mail.password }}"
   MAIL_SENDER_NAME: "{{ .Values.mail.sender.name | default .Values.global.portal.mail.sender.name }}"
   MAIL_SENDER_EMAIL: "{{ .Values.mail.sender.email | default .Values.global.admin.email }}"
-  APP_SERVICE: "{{ .Values.host | default (or .Values.global.portal.host .Values.global.gateway.host) }}/service"
+  APP_SERVICE: "{{ .Values.host | default (or .Values.global.portal.host (printf "%s://%s" $gatewayProtocol .Values.global.gateway.host)) }}/service"
